Support pathway activity comparison plot